--- a/idp/catalog-info.yaml
+++ b/idp/catalog-info.yaml
@@ -16,7 +16,7 @@ kind: Component
 metadata:
   name: ui
   description: |
-    Frontend react UI for globalcorp.
+    API to store customer storefront orders.
   links:
     - title: Website
       url: http://harness.io
