--- a/idp/catalog-info.yaml
+++ b/idp/catalog-info.yaml
@@ -1,4 +1,4 @@
-globalcorp-quotesapiapiVersion: backstage.io/v1alpha1
+apiVersion: backstage.io/v1alpha1
 kind: Group
 metadata:
   name: ordersapiowner
